# Telemetria

Codigo/: CMakeLists.txt
Codigo/Examples/: CMakeLists.txt  calibrateSensors.c  readPort.py  telemetria.c
Codigo/gps_module/: CMakeLists.txt  gps.c  gps.h
Codigo/mpu_9250/: mpu9250.c  mpu9250.h
Codigo/wifi_module/: CMakeLists.txt  wmodule.c  wmodule.h
Documentacion/html/: _c_make_files_23_826_83_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  _c_make_files_23_826_83_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _examples_2_c_make_files_2telemetria_8dir_2_c___2_v_s_a_r_m_2sdk_2pico_2pico-sdk_2src_2common_2p50441ed07031cd1c46f7f35c0e157bb5.html  _examples_2_c_make_files_2telemetria_8dir_2_c___2_v_s_a_r_m_2sdk_2pico_2pico-sdk_2src_2common_2p8d508b05013799a45ccf43336a83f032.html  _examples_2_c_make_files_2telemetria_8dir_2_c___2_v_s_a_r_m_2sdk_2pico_2pico-sdk_2src_2common_2p948aa986a8af2703223fb5bddd2f079c.html  _examples_2_c_make_files_2telemetria_8dir_2_c___2_v_s_a_r_m_2sdk_2pico_2pico-sdk_2src_2common_2pico__sync_2mutex_8c_8obj_8d.html  _examples_2_c_make_files_2telemetria_8dir_2_c___2_v_s_a_r_m_2sdk_2pico_2pico-sdk_2src_2common_2pico__sync_2sem_8c_8obj_8d.html  _examples_2_c_make_files_2telemetria_8dir_2_c___2_v_s_a_r_m_2sdk_2pico_2pico-sdk_2src_2common_2pico__time_2time_8c_8obj_8d.html  _examples_2_c_make_files_2telemetria_8dir_2_c___2_v_s_a_r_m_2sdk_2pico_2pico-sdk_2src_2common_2pico__util_2datetime_8c_8obj_8d.html  annotated.html  audio__device_8c_8obj_8d.html  calibrate_sensors_8c.html  (+386 more)
Interfaz/: datos.csv  graficas.py  mapa.html
(+75 files in other folders)
